fixes issues with overflown tabs

--- a/src/Umbraco.Web.UI.Client/src/less/hacks.less
+++ b/src/Umbraco.Web.UI.Client/src/less/hacks.less
@@ -10,7 +10,6 @@
 .ui-sortable-placeholder {
      margin-left: 0 !important;
 }
-
 .controls-row img {
 	max-width: none;
 }
@@ -26,11 +25,6 @@
 iframe, .content-column-body {
     background: center center url(../img/loader.gif) no-repeat;
     border: none;
-}
-
-/* ng-cloak support with lazyloading */
-[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
-  display: none;
 }
 
 /* JQUERY FILEUPLOAD TEMP STYLES */
