--- a/src/Umbraco.Web.UI.Client/src/less/panel.less
+++ b/src/Umbraco.Web.UI.Client/src/less/panel.less
@@ -126,7 +126,6 @@
 
 
 /* Publish */
-
 .umb-btn-toolbar .dropdown-menu {
   right: 0;
   left: auto;
@@ -171,7 +170,7 @@
 .umb-tab-buttons{padding-left: 240px;}
 .umb-tab-pane.with-buttons{padding-bottom: 80px}
 
-
+.tab-content{overflow: visible; }
 
 
  // Utility classes
